# cuda-pairwise-alignment

./: .gitignore  NOTES.md  README.md  bigtimeit  build.sh  check_race.sh  run_tests.sh  test_gen.sh  timeit
fasta/: CMakeLists.txt  fasta.c  fasta.h
libs/cuda/: cuda_utilities.c
par/: CMakeLists.txt  alignment.cu  alignment.h  main.c
ref/: #globalalign.c#  CMakeLists.txt  globalalign.c  globalalign.h
scorematrix/: CMakeLists.txt  scorematrix.c  scorematrix.h
tests/: Candidatus_Nitrosopumilus.fasta  Exiguobacterium_antarcticum.fasta  Thermosipho_africanus_H17ap60334_Contig16.fasta  Thermosipho_africanus_H17ap60334_Contig44.fasta  a.fasta  big_seq.fasta  bla1.fasta  bla2.fasta  gadus-morhua-pgr-short.fasta  gadus-morhua-pgr-short1.fasta  gadus-morhua-pgr.fasta  human-pgr-medium.fasta  human-pgr-short.fasta  human-pgr-small.fasta  human-pgr-small1.fasta  human-pgr-small2.fasta  human-pgr-small3.fasta  human-pgr-small4.fasta  human-pgr-small5.fasta  human-pgr-small6.fasta  human-pgr.fasta  slide1.fasta  slide2.fasta  slide3.fasta  small2_1.fasta  small2_2.fasta  small_seq.fasta  standard_score.sm
tests/suite/: 100000.fasta  100000b.fasta  1006b.fasta  1024.fasta  1024b.fasta  1048538b.fasta  1048576.fasta  1048576b.fasta  110000.fasta  110000b.fasta  120000.fasta  120000b.fasta  131040b.fasta  131072.fasta  131072b.fasta  150000.fasta  150000b.fasta  16358b.fasta  16384.fasta  16384b.fasta  1677722b.fasta  170000.fasta  170000b.fasta  190000.fasta  190000b.fasta  2028b.fasta  2048.fasta  2048b.fasta  2097112b.fasta  2097152.fasta  2097152b.fasta  210000.fasta  (+37 more)
